wip: add mattersim model, the predictions differ likely due to mismatch in the triplet implementation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ docstring-code-format = true
 
 [tool.codespell]
 check-filenames = true
+ignore-words-list = ["convertor"]
 
 [tool.pytest]
 addopts = ["--cov-report=term-missing", "--cov=torch_sim", "-v"]
